--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: $page-padding-default;
 }
 
 .navbar-light {
@@ -29,4 +29,22 @@
 .dark-mode-btn-dark {
     background-color: $dark-mode-input;
     color: $dark-mode-text;
+}
+
+.home {
+    padding: $page-padding-default
+}
+
+.home-nav {
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@media screen and (max-width: 500px) {
+    .home-nav {
+        flex-direction: column;
+    }
+    
 }
