--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -18,3 +18,6 @@ $light-mode-background: hsl(0, 0%, 98%);
 $dark-mode-text: hsl(0, 0%, 100%);
 $dark-mode-input: hsl(209, 23%, 22%);
 $dark-mode-background: hsl(207, 26%, 17%);
+
+// page structure
+$page-padding-default: 0 20px;
