--- a/src/styles/country-details.scss
+++ b/src/styles/country-details.scss
@@ -30,12 +30,12 @@
     gap: 10px;
 }
 
-.back-btn-light {
+.btn-light {
     background-color: white;
     color: $light-mode-text;
 }
 
-.back-btn-dark {
+.btn-dark {
     background-color: $dark-mode-input;
     color: $dark-mode-text;
 }
@@ -70,6 +70,12 @@
     display: flex;
     gap: 5px;
     flex-wrap: wrap;
+    button {
+        cursor: pointer;
+        border: 0;
+        border-radius: 5px;
+        padding: 10px 20px;
+    }
 }
 
 @media screen and (max-width: 765px) {
