--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -67,7 +67,7 @@
         height: 150px;
         object-fit: cover;
     }
-    .country-details {
+    .country-details-home {
         padding: 10px 20px;
         p {
             font-size: $homepage-font-size;
